added middleware for admin routes
