# docs/swagger.yaml
@@ -185,6 +185,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/presenters.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/presenters.ErrorResponse'
         "403":
           description: Forbidden
           schema:
@@ -193,7 +197,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/presenters.ErrorResponse'
-      summary: List users
+      summary: List users (admin)
       tags:
       - User
     post:
@@ -216,6 +220,10 @@ paths:
             $ref: '#/definitions/presenters.UserResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/presenters.ErrorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/presenters.ErrorResponse'
         "403":
@@ -255,6 +263,10 @@ paths:
             $ref: '#/definitions/presenters.UserResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/presenters.ErrorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/presenters.ErrorResponse'
         "403":
